# pyseal

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  pyproject.toml
src/: lib.rs  main.rs
src/python/pysealer/: check_decorators.py  cli.py  git_pre_commit.py
src/python/vurze/: __init__.py  add_decorators.py  check_decorators.py  cli.py  remove_decorators.py  setup.py
src/rust/: lib.rs  parser.rs
