[package]
name = "vurze"
version = "0.1.0"
edition = "2025"
description = "Version control your Python functions and classes with automated cryptographic decorator injection."
license = "MIT"
repository = "https://github.com/MCP-Security-Research/vurze"
keywords = ["rust", "python", "decorator", "version-control", "cryptography"]

# Rust-Python Bindings Library
[lib]
name = "vurze"
crate-type = ["cdylib"]

# General Project Dependencies
[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
